<resources>
    <string name="app_name">NoteApp</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="title_is_empty">Note title can`t be empty</string>
    <string name="note_is_empty">Note can`t be empty</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">pick_color</string>
    <string name="add_image">add image</string>
    <string name="require_permission_read_storage">you need to accept read storage permissions to use this function.</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_valid_url">Enter valid URL</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_question">Delete Note?</string>
    <string name="delete">Delete</string>
    <string name="note_added">Note added</string>
    <string name="note_updated">Note updated</string>

</resources>