<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorDelete" />

    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/delete_note_question"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/imageDeleteNote"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintBottom_toTopOf="@id/textDelete"/>

    <TextView
        android:id="@+id/textDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/delete"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNote"
        app:layout_constraintStart_toEndOf="@id/textCancel"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/textDelete"
        app:layout_constraintEnd_toStartOf="@id/textDelete"/>

</androidx.constraintlayout.widget.ConstraintLayout>