<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            tools:context=".ui.activities.MainActivity">

            <TextView
                android:id="@+id/textMyNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/my_notes"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layoutSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/background_search"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/textMyNotes">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_search"
                    app:tint="@color/colorSearchIcon" />

                <EditText
                    android:id="@+id/inputSearch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/search_notes"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutSearch"
                app:spanCount="2"
                tools:itemCount="5"
                tools:layout_editor_absoluteX="3dp"
                tools:listitem="@layout/item_container_note" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/imageAddNoteMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_add"
            android:layout_gravity="bottom|end"
            app:tint="@color/colorPrimary" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>